# gosyn

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: parser.rs  scanner.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_source.rs
shika_parser/: Cargo.toml
shika_parser/src/: ast.rs  ast_impl.rs  error.rs  lib.rs  parser.rs  parser_expr.rs  scanner.rs  token.rs
shika_parser/testdata/: main.go
shika_parser/tests/: exception.txt  file.rs
shika_proc_macro/: Cargo.toml
shika_proc_macro/src/: enum_from.rs  enum_from_wrapped.rs  enum_into_wrapped.rs  enum_variant.rs  lib.rs
shika_syntax/: Cargo.toml
shika_syntax/src/: ast.rs  error.rs  lib.rs  parser.rs  scanner.rs
shika_syntax/tests/: file.rs
shika_tool/: Cargo.toml
shika_tool/src/: lib.rs
shika_util/: Cargo.toml
src/: ast.rs  ast_impl.rs  error.rs  lib.rs  parser.rs  scanner.rs  token.rs
tests/: comments.rs  file.rs  fuzz.rs  tokenize.rs  walkdir.rs
tests/testdata/: docs.go  func_docs.go  fuzz001.go.txt  go.mod  helloworld.go
