[package]
name = "gosyn"
version = "0.2.1"
edition = "2021"
authors = ["Kevin Chen <kevin@chenbc.me>"]
description = "Golang syntax parser in Rust"
repository = "https://github.com/chikaku/gosyn"
documentation = "https://docs.rs/gosyn"
readme = "README.md"
license = "MIT"

[dependencies]
unic-ucd-category = "0.9.0"
strum = { version = "0.24.1", features = ["derive"] }

[dev-dependencies]
pprof = { version = "0.11.0", features = ["flamegraph"] }
