[package]
name = "gosyn"
version = "0.2.3"
edition = "2021"
authors = ["Kevin Chen <kevin@chenbc.me>"]
description = "Golang syntax parser in Rust"
repository = "https://github.com/chikaku/gosyn"
documentation = "https://docs.rs/gosyn"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0"
unic-ucd-category = "0.9.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.44"

[dev-dependencies]
pprof = { version = "0.11.0", features = ["flamegraph"] }
criterion = "0.3"

[[bench]]
name = "scanner"
harness = false

[[bench]]
name = "parser"
harness = false
