[package]
name = "gosyn"
version = "0.2.9"
edition = "2021"
authors = ["Kevin Chen <kevin@chenbc.me>"]
description = "Golang syntax parser in Rust"
repository = "https://github.com/chikaku/gosyn"
documentation = "https://docs.rs/gosyn"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0"
unic-ucd-category = "0.9.0"
serde = { version = "1", features = ["derive", "rc"], optional = true }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
pprof = { version = "0.14.0", features = ["flamegraph"] }
criterion = "0.5"

[[bench]]
name = "scanner"
harness = false

[[bench]]
name = "parser"
harness = false
