[package]
name = "shika_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shika_proc_macro = { path = "../shika_proc_macro" }
unic-ucd-category = "0.9.0"
log = "0.4.14"

[dev-dependencies]
env_logger = "0.9.0"
shika_tool = { path = "../shika_tool" }
