[package]
name = "shika_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shika_proc_macro = { path = "../shika_proc_macro" }
unic-ucd-category = "0.9.0"
ouroboros = "0.14.0"

[dev-dependencies]
shika_tool = { path = "../shika_tool" }
